@@ -10,6 +10,7 @@ HEAD
 - don't send more DATA_B3 messages than allowed by CAPI_MAX_B3_BLOCKS
 - added 'k' option to capi receivefax command for not deleting bad faxes
 - added b-channel number to channel name for better identification
+- added variable setting REDIRECTIONNUMBER on outgoing call
 QSIG:
  - added support for different qsig variants
  - added support for rerouting informations on incoming calls
